--- a/app/assets/stylesheets/toilets.css
+++ b/app/assets/stylesheets/toilets.css
@@ -3,3 +3,13 @@
   height: 400px;
   background-color: yellow;
 }
+
+#toilets-index-table {
+  background-color: black;
+}
+
+
+#toilets-index-list {
+  background-color: red;
+  display:inline-block;
+}
