--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -1,5 +1,23 @@
-<h1>Toilets#index</h1>
-<p>Find me in app/views/toilets/index.html.erb</p>
+<h1>Toilets near [INSERT ZIP CODE]</h1>
 
+<div id="toilets-index-table" class="row">
 
-<div id="google-map"></div>
+  <div id="toilets-index-list" class="content medium-12 large-3">
+    <!-- loop to show toilets in area -->
+    <p>Placeholder for list of toilets</p>
+  </div>
+
+  <div id="google-map" class="medium-12 large-9 "></div>
+  <script>
+  function initMap() {
+    var mapDiv = document.getElementById('google-map');
+    var map = new google.maps.Map(mapDiv, {
+          center: {lat: 44.540, lng: -78.546},
+          zoom: 8
+        });
+  }
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
+         async defer></script>
+
+</div>
