--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -2,18 +2,18 @@
 
 <div id="toilets-index-table" class="row">
 
-  <div id="toilets-index-list" class="content medium-12 large-3">
+  <div id="toilets-index-list" class="small-block-grid-1 large-block-grid-2">
     <!-- loop to show toilets in area -->
     <p>Placeholder for list of toilets</p>
   </div>
 
-  <div id="google-map" class="medium-12 large-9 "></div>
+  <div id="google-map" class="small-block-grid-1 large-block-grid-2"></div>
   <script>
   function initMap() {
     var mapDiv = document.getElementById('google-map');
     var map = new google.maps.Map(mapDiv, {
-          center: {lat: 44.540, lng: -78.546},
-          zoom: 8
+          center: {lat: 40.7831, lng: -73.9712},
+          zoom: 12
         });
   }
   </script>
