--- a/toilet_pal/app/views/toilets/show.html.erb
+++ b/toilet_pal/app/views/toilets/show.html.erb
@@ -1,2 +1,6 @@
-<h1><%= @toilet.name %></h1>
+<h1><%= @toilet.name %> Toilet's</h1>
 
+<div>
+	<p>Location: <%= @toilet.location %></p>
+	<p>Average Review: <%= @average_review %></p>
+<div>
