--- a/toilet_pal/app/views/layouts/application.html.erb
+++ b/toilet_pal/app/views/layouts/application.html.erb
@@ -19,9 +19,19 @@
   </div>
   <div class="top-bar-right">
     <ul class="menu" data-responsive-menu="drilldown medium-dropdown">
-      <li class="has-submenu">
-        <a href="#">Login</a>
-      </li>
+      <% if logged_in? %>
+        <li>
+          <%= link_to 'Profile', current_user %>
+          <%= link_to "Log out", logout_path, method: :delete %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to 'New User', new_user_path %>
+        </li>
+        <li class="has-submenu">
+          <%= link_to 'Login', login_path %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </div>
