--- a/toilet_pal/app/views/toilets/show.html.erb
+++ b/toilet_pal/app/views/toilets/show.html.erb
@@ -4,3 +4,7 @@
 	<p>Location: <%= @toilet.location %></p>
 	<p>Average Review: <%= @average_review %></p>
 <div>
+
+<div>
+	<%= image_tag "fancy_toilet.jpg" %>
+</div>
