--- a/app/assets/stylesheets/header_footer.css
+++ b/app/assets/stylesheets/header_footer.css
@@ -1,10 +1,9 @@
-
 .full-width {
   max-width: 1400px;
 }
 
 .footer {
-  background-color: #2980b9;
+  background-color: #73B99C;
   padding: 2rem 4rem;
   text-align: center;
   color: #fff;
@@ -42,15 +41,15 @@
 
 
 .title-bar {
-  background: #333;
+  background: #73B99C;
   padding: 0.9rem; }
 
 .top-bar {
-  background: #333; }
+  background: #73B99C; }
   .top-bar ul {
-    background: #333; }
+    background: #73B99C; }
     .top-bar ul li {
-      background: #333; }
+      background: #73B99C; }
       .top-bar ul li a {
         color: #fff; }
 
