--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="row full-width" id="home-page-image"><%= image_tag "blue_toilet_paper.jpg" %></div>
+
+<div class "row full-width">
+  <h3>Trending Toilets</h3>
+    <ul id="trending-toilets" class="small-block-grid-3">
+      <li><div class="home-page-featured-toilet"><%= image_tag "public_restroom.jpg" %></div></li>
+      <li><div class="home-page-featured-toilet"><%= image_tag "public_restroom.jpg" %></div></li>
+      <li><div class="home-page-featured-toilet"><%= image_tag "public_restroom.jpg" %></div></li>
+    </ul>
+</div>
