--- a/toilet_pal/app/views/layouts/application.html.erb
+++ b/toilet_pal/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <div class="top-bar" id="main-menu">
   <div class="top-bar-left">
     <ul class="dropdown menu" data-dropdown-menu>
-      <li class="menu-text">TOILET PAL</li>
+      <li id="logo" class="menu-text">TOILET PAL</li>
     </ul>
   </div>
   <div class="top-bar-right">
