Show user zip code in list of toilets

--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Toilets near [INSERT ZIP CODE]</h1>
+<h1>Toilets near <%= current_user.zip_code %></h1>
 
 <div id="toilets-index-table" class="row">
 
