adjust some css unsuccessfully

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,7 @@
-<div class="row full-width" id="home-page-image"><%= image_tag "blue_toilet_paper.jpg" %></div>
+<div class="media-object">
+  <div class="full-width" id="home-page-image"><%= image_tag "blue_toilet_paper.jpg" %>
+  </div>
+</div>
 
 <div class "row full-width">
   <h3>Trending Toilets</h3>
