--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,23 +12,28 @@
 </div>
 
 <div class="top-bar" id="main-menu">
-  <div class="top-bar-left">
+  <div class="top-bar-title">
     <ul class="dropdown menu" data-dropdown-menu>
       <li id="logo" class="menu-text">TOILET PAL</li>
     </ul>
   </div>
   <div class="top-bar-right">
-    <ul class="menu" data-responsive-menu="drilldown medium-dropdown">
+    <ul class="menu button-group" id='nav-bar' data-responsive-menu="drilldown medium-dropdown">
+      <li class='button'>
+        <%= link_to 'Home', root_path %>
+      </li>
       <% if logged_in? %>
-        <li>
+        <li class='button'>
           <%= link_to 'Profile', current_user %>
+        </li>
+        <li class='button'>
           <%= link_to "Log out", logout_path, method: :delete %>
         </li>
       <% else %>
-        <li>
+        <li class='button'>
           <%= link_to 'New User', new_user_path %>
         </li>
-        <li class="has-submenu">
+        <li class='button'>
           <%= link_to 'Login', login_path %>
         </li>
       <% end %>
