--- a/toilet_pal/app/assets/stylesheets/toilets.css
+++ b/toilet_pal/app/assets/stylesheets/toilets.css
@@ -19,12 +19,15 @@
 
 .toilet_reviews {
 	text-align: center;
-	width: 50%;
+/*	width: 50%;*/
 	margin: auto;
+  margin-top: 2%;
+
 }
 
 .reviewer_info {
-	background-color: rgb(193,245,239) 
+	background-color: rgb(193,245,239);
+  border: gray solid 1px;
 }
 
 .reviews_new_form {
@@ -37,5 +40,28 @@
   width: 40%;
   margin: auto;
   text-align: center;
-  margin-bottom: 5%;
+  margin-bottom: 1%;
 }
+
+.review_text {
+  margin-top: -1rem;
+  background-color: rgb(208,248,239);
+  border: gray solid 1px;
+
+}
+
+.review_wrapper {
+  margin: auto;
+  width: 50%;
+  -moz-box-shadow:    3px 3px 5px 6px #ccc;
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+  box-shadow:         3px 3px 5px 6px #ccc;
+
+}
+
+img {
+    -webkit-box-shadow: 8px 8px 6px -6px black;
+     -moz-box-shadow: 8px 8px 6px -6px black;
+          box-shadow: 8px 8px 6px -6px black;
+}
+
