Created model for favorites, created columns for favorites table

--- a/app/views/toilets/show.html.erb
+++ b/app/views/toilets/show.html.erb
@@ -3,6 +3,7 @@
 		<h1><%= @toilet.name %> Toilet's</h1>
 		<p>Location: <%= @toilet.location %></p>
 		<p>Neighborhood: <%= @toilet.neighborhood %></p>
+		<p>Borough: <%= @toilet.sublocality %></p>
 		<p>Average Review: <%= @average_review %></p>
 		<a href='/toilets/<%= @toilet.id %>/review'>Click</a> to review your Toilet experience
 	</div>
