--- a/toilet_pal/app/views/toilets/index.html.erb
+++ b/toilet_pal/app/views/toilets/index.html.erb
@@ -1,4 +1,13 @@
-<h1>Toilets near <%= current_user.zip_code %></h1>
+
+<% if !@user_input%>
+
+
+
+<% else %>
+
+<h1>Toilets near <%=@user_input%>: </h1>
+
+<% end %>
 
 <div id="toilets-index-table" class="row">
 
@@ -7,10 +16,13 @@
     <p>Placeholder for list of toilets</p>
   </div>
 
-  <div id="google-map" class="small-block-grid-1 large-block-grid-2"></div>
+  <div id="toilet-map" class="small-block-grid-1 large-block-grid-2"></div>
+
+
+
   <script>
   function initMap() {
-    var mapDiv = document.getElementById('google-map');
+    var mapDiv = document.getElementById('toilet-map');
     var map = new google.maps.Map(mapDiv, {
           center: {lat: 40.7831, lng: -73.9712},
           zoom: 12
