--- a/toilet_pal/app/views/toilets/index.html.erb
+++ b/toilet_pal/app/views/toilets/index.html.erb
@@ -1,7 +1,7 @@
 
 <% if !@user_input%>
 
-
+<!-- give search box for user to choose where they want to go -->
 
 <% else %>
 
@@ -16,20 +16,52 @@
     <p>Placeholder for list of toilets</p>
   </div>
 
-  <div id="toilet-map" class="small-block-grid-1 large-block-grid-2"></div>
+  <div id="google-map" class="small-block-grid-1 large-block-grid-2"></div>
 
+<% if @user_input %>
 
+<!-- check to make sure you can call ruby variables inside the javascript call below -->
+
+    <script>
+  function initMap() {
+    var mapDiv = document.getElementById('google-map');
+    var map = new google.maps.Map(mapDiv, {
+          center: {lat: <%=@user_input_latitude%>, lng: <%=@user_input_longitude%>},
+          zoom: 12
+        });
+    })
+  }
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"async defer></script>
+
+<% else %>
 
   <script>
   function initMap() {
-    var mapDiv = document.getElementById('toilet-map');
+    var mapDiv = document.getElementById('google-map');
     var map = new google.maps.Map(mapDiv, {
           center: {lat: 40.7831, lng: -73.9712},
           zoom: 12
         });
+    $.getJSON("/toilet_data").done(function(toilets) {
+      for(var i=0; i < 50; i++){
+          var marker = new google.maps.Marker({
+          position: {lat: (toilets[i].latitude - 0), lng: (toilets[i].longitude - 0)},
+          map: map,
+          title: toilets[i].name
+    });
+      }
+
+    })
+    var marker = new google.maps.Marker({
+      position: {lat: 40.7831, lng: -73.9712},
+      map: map,
+      title: "TOILET"
+    });
   }
   </script>
-  <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
-         async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"async defer></script>
+
+<% end %>
 
 </div>
