--- a/toilet_pal/app/views/layouts/application.html.erb
+++ b/toilet_pal/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
           <%= link_to 'Profile', current_user %>
         </li>
         <li class='button'>
+          <%= link_to "Settings", edit_user_path(current_user) %>
+        </li>
+        <li class='button'>
           <%= link_to "Log out", logout_path, method: :delete %>
         </li>
       <% else %>
@@ -40,7 +43,11 @@
     </ul>
   </div>
 </div>
-
+<div>
+  <% flash.each do |message_type, message| %>
+    <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% end %>
+</div>
 
 <%= yield %>
 
