--- a/toilet_pal/app/views/users/edit.html.erb
+++ b/toilet_pal/app/views/users/edit.html.erb
@@ -1,22 +1,24 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<% provide(:title, "Edit user") %>
+<h1>Update your profile</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for :user, url: users_path do |f| %>
+    <%= form_for(@user) do |f| %>
 
-      <%= f.label :username %><br>
+      <%= f.label :username %>
       <%= f.text_field :username, class: 'form-control' %>
 
-      <%= f.label :password %><br>
-      <%= f.password_field :password, class: 'form-control' %>
-
-      <%= f.label :email %><br>
+      <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
 
       <%= f.label :first_name %><br>
-      <%= f.text_field :first_name, class: 'form-control' %>
+      <%= f.text_field :first_name, class: 'form-control' %><br>
 
       <%= f.label :last_name %><br>
       <%= f.text_field :last_name, class: 'form-control' %>
@@ -27,7 +29,7 @@
       <%= f.label :gender %><br>
       <%= f.text_field :gender, class: 'form-control' %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "Save changes", class: "button primary" %>
     <% end %>
   </div>
 </div>
