--- a/toilet_pal/app/views/toilets/show.html.erb
+++ b/toilet_pal/app/views/toilets/show.html.erb
@@ -1,11 +1,17 @@
 <div class='row'>
-	<div class='large-8 columns'>
+	<div class='large-2 columns'>
 		<% if @toilet.favorites.any?{|fav| fav.favoriter_id == session[:user_id]} %>
 			<%= image_tag "fav-star.jpg" %>
 		<% else %>
 			<a href='/toilets/<%= @toilet.id %>/favorite'><%= image_tag "non-fav-star.jpg"%></a>
 		<% end %>
+	</div>
+	<div class='large-10 columns'>
 		<h1><%= @toilet.name %> Toilet's</h1>
+	</div>
+</div>
+<div class='row'>
+	<div class='large-8 columns'>
 		<p>Location: <%= @toilet.location %></p>
 		<p>Neighborhood: <%= @toilet.neighborhood %></p>
 		<p>Borough: <%= @toilet.sublocality %></p>
