--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,32 +2,35 @@
 <h1>Sign up</h1>
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="6-medium-columns">
     <%= form_for :user, url: users_path do |f| %>
 
       <%= f.label :username %><br>
-      <%= f.text_field :username, class: 'form-control' %>
+      <%= f.text_field :username %>
 
       <%= f.label :password %><br>
-      <%= f.password_field :password, class: 'form-control' %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
 
       <%= f.label :email %><br>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.email_field :email %>
 
 
       <%= f.label :first_name %><br>
-      <%= f.text_field :first_name, class: 'form-control' %>
+      <%= f.text_field :first_name %>
 
       <%= f.label :last_name %><br>
-      <%= f.text_field :last_name, class: 'form-control' %>
+      <%= f.text_field :last_name %>
 
       <%= f.label :zip_code %><br>
-      <%= f.text_field :zip_code, class: 'form-control' %>
+      <%= f.text_field :zip_code %>
 
       <%= f.label :gender %><br>
-      <%= f.text_field :gender, class: 'form-control' %>
+      <%= f.text_field :gender %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "Create my account", class: "primary button" %>
     <% end %>
   </div>
 </div>
