add will_paginate gem and feature to reviews show page - adjust css for review show page

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -22,3 +22,20 @@
     border-bottom: 1px solid $gray-lighter;
   }
 }
+
+.user-about {
+  display: block;
+  text-align: center;
+  border-style: solid;
+  border-color: #73B99C;
+  width: 25%;
+  margin: auto;
+}
+
+.reviews-user {
+  margin-left: 160px;
+}
+
+.favorites-user {
+  margin-right: 160px;
+}
