--- a/app/assets/stylesheets/toilets.css
+++ b/app/assets/stylesheets/toilets.css
@@ -1,18 +1,27 @@
 #google-map {
-  width: 500px;
-  height: 400px;
-  background-color: yellow;
+  width: 100%;
+  height: 50%;
 }
 
 #toilets-index-table {
-  background-color: black;
+  width: 100%;
+  height: 100%;
+}
+
+#homepage-header {
+  text-align: center;
 }
 
 
 #toilets-index-list {
-  background-color: red;
+  background-color: gray;
   display:inline-block;
+  height: 50%;
+  width: 100%;
+  overflow:auto;
 }
+
+
 #toilet_image {
 	float: right;
   -webkit-box-shadow: 8px 8px 6px -6px black;
