--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -44,7 +44,9 @@
 
 
   <div id="toilets-index-list" >
-    <%= render @toilets %>
+    <ul class="small-block-grid-3">
+      <%= render @toilets %>
+    </ul>
   </div>
 
 </div>
