--- a/app/assets/stylesheets/toilets.css
+++ b/app/assets/stylesheets/toilets.css
@@ -14,7 +14,6 @@
 
 
 #toilets-index-list {
-  background-color: gray;
   display:inline-block;
   height: 50%;
   width: 100%;
@@ -72,4 +71,9 @@
 
 }
 
-
+.toilet-block {
+  display:block;
+  float:left;
+  border: black 2px solid;
+  background-color: grey;
+}
