Added filters, working on functionality

--- a/toilet_pal/app/views/toilets/index.html.erb
+++ b/toilet_pal/app/views/toilets/index.html.erb
@@ -72,9 +72,19 @@
   </div>
 </div>
 
+<div id='row'>
+  <form action='/toilet_data' method='get'>
+    <div class='filters'>
+      Public<input type='radio' name='filter' value='Public'>
+      Basketball Courts<input type='radio' name='filter' value='Basketball Courts'>
+      Book Store<input type='radio' name='filter' value='Book Store'>
+    </div>
+    <div class='filters'>
+      <input class='primary button' type='submit' value='Show Me The Toilets!'>
+    </div>
+</div>
 
-  <div id='filters'>
-
+<div id='filters'>
   <div id="toilets-index-list" >
     <ul class="small-block-grid-3">
       <%= render @toilets %>
