add more css and try debugging error handling

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -1,16 +1,18 @@
 #error_explanation {
   color: red;
-  ul {
-    color: red;
-    margin: 0 0 30px 0;
-  }
+}
+
+#error_explanation ul {
+  color: red;
+  margin: 0 0 30px 0;
 }
 
 .field_with_errors {
   @extend .has-error;
-  .form-control {
-    color: $state-danger-text;
-  }
+}
+
+.field_with_errors .form-control {
+  color: $state-danger-text;
 }
 
 .users {
@@ -31,6 +33,7 @@
   border-color: #73B99C;
   width: 25%;
   margin: auto;
+  margin-top: 1%;
 }
 
 .ind-review {
