--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   <div class="top-bar-title">
     <ul class="dropdown menu" data-dropdown-menu>
       <li id="logo" class="menu-text">TOILET PAL</li>
+      <li id="logo" class="menu-text">Take the Browns to the Superbowl, without the stress</li>
     </ul>
   </div>
   <div class="top-bar-right">
