--- a/app/assets/stylesheets/toilets.css
+++ b/app/assets/stylesheets/toilets.css
@@ -82,9 +82,11 @@
 .toilet-block {
   display:block;
   float:left;
+  width: 30%;
+  min-height: 200px;
   margin: 10px;
   padding: 10px;
-  background-color: #C2DAE8;
+  background-color: #bdc3c7;
 }
 
 .top_title {
