Add logo to top nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,11 @@
 </head>
 <body>
 
-<div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
-</div>
 
 <div class="top-bar" id="main-menu">
   <div class="top-bar-title">
     <ul class="dropdown menu" data-dropdown-menu>
-      <li id="logo" class="menu-text">TOILET PAL</li>
+      <li id="logo-image" class="menu-text"><%= image_tag "ToiletPal_logo.png", size: "100"%></li>
       <li id="logo" class="menu-text">Take the Browns to the Superbowl, without the stress</li>
     </ul>
   </div>
