--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
 <div class="top-bar" id="main-menu">
   <div class="top-bar-title">
     <ul class="dropdown menu" data-dropdown-menu>
-      <li id="logo-image" class="menu-text"><%= image_tag "ToiletPal_logo.png", size: "100"%></li>
-      <li id="logo" class="menu-text">Take the Browns to the Superbowl, without the stress</li>
+      <li id="logo-image" class="menu-text"><%= image_tag "need-to-pee.png", size: "100"%></li>
+
     </ul>
   </div>
   <div class="top-bar-right">
@@ -59,14 +59,10 @@
 <footer class="footer">
   <div class="row full-width">
     <div class="small-12 medium-3 large-4 columns">
-      <i class="fi-laptop"></i>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum maiores alias ea sunt facilis impedit fuga dignissimos illo quaerat iure in nobis id quos, eaque nostrum! Unde, voluptates suscipit repudiandae!</p>
+      <h4>What is Toilet Pal?</h4>
+      <p>ToiletPal is a resource for finding public toilets in New York City</p>
     </div>
     <div class="small-12 medium-3 large-4 columns">
-      <i class="fi-html5"></i>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit impedit consequuntur at! Amet sed itaque nostrum, distinctio eveniet odio, id ipsam fuga quam minima cumque nobis veniam voluptates deserunt!</p>
-    </div>
-    <div class="small-6 medium-3 large-2 columns">
       <h4>Work With Us</h4>
       <ul class="footer-links">
         <li><a href="#">Alyssa</a></li>
@@ -74,7 +70,7 @@
         <li><a href="#">FJ</a></li>
       <ul>
     </div>
-    <div class="small-6 medium-3 large-2 columns">
+    <div class="small-12 medium-3 large-4 columns">
       <h4>Follow Us</h4>
       <ul class="footer-links">
         <li><a href="#">Facebook</a></li>
