--- a/app/assets/stylesheets/toilets.css
+++ b/app/assets/stylesheets/toilets.css
@@ -86,7 +86,7 @@
   min-height: 200px;
   margin: 10px;
   padding: 10px;
-  background-color: #bdc3c7;
+  background-color: #dbc3d0;
 }
 
 .top_title {
