--- a/app/assets/stylesheets/toilets.css
+++ b/app/assets/stylesheets/toilets.css
@@ -96,3 +96,11 @@
 .filters {
   text-align: center;
 }
+
+#location-submit-button {
+  width: 100%;
+}
+
+#location-submission-box {
+  margin: 0;
+}
