--- a/app/assets/stylesheets/toilets.css
+++ b/app/assets/stylesheets/toilets.css
@@ -76,7 +76,6 @@
   -moz-box-shadow:    3px 3px 5px 6px #ccc;
   -webkit-box-shadow: 3px 3px 5px 6px #ccc;
   box-shadow:         3px 3px 5px 6px #ccc;
-
 }
 
 .toilet-block {
@@ -103,4 +102,8 @@
 
 #location-submission-box {
   margin: 0;
+}
+
+#toilet-name {
+  text-decoration: 'none';
 }
