update application controller to authorize user before accessing home page - also update layout links to register and login to correct devise routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,10 +38,10 @@
         </li>
       <% else %>
         <li class='button'>
-          <%= link_to 'REGISTER', new_user_path %>
+          <%= link_to 'REGISTER', new_user_registration_path %>
         </li>
         <li class='button'>
-          <%= link_to 'LOGIN', login_path %>
+          <%= link_to 'LOGIN', new_user_session_path %>
         </li>
       <% end %>
     </ul>
