Refactor seed file

--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -42,15 +42,15 @@
           center: {lat: <%= @search_location[0] %>, lng: <%= @search_location[1] %>},
           zoom: 14
         });
-    var icon = "<%= asset_path 'toilet-icon.png' %>"
+    var icon = "<%= asset_path 'toilet-icon.png'%>"
     var infoWindows = []
 
     $.getJSON("/toilet_data").done(function(toilets) {
-      console.log(toilets[0])
+
       for(var i=0; i < toilets.length; i++){
         var contentString =
-        '<h1 id="firstHeading" class="firstHeading">'+toilets[i].name+'</h1>'+
-        '<div id="bodyContent"><p>'+ toilets[i].location +'</p>'+
+        '<h3>'+toilets[i].name+'</h3>'+
+        '<div id="bodyContent"><p>Location: '+ toilets[i].location + '</p>'+
         '<p><a class="button"><i class="fi-magnifying-glass"></i> Details </a> <a class="button"><i class="fi-pencil"></i> Review </a> <a class="button"><i class="fi-map"></i> Directions </a></p></div>';
 
         var infowindow = new google.maps.InfoWindow({content: contentString});
